SUBDIRS = . m4 intl po src

EXTRA_DIST = config.rpath mkinstalldirs  AUTHORS COPYING INSTALL ChangeLog-UNSTABLE \
	TODO amule.desktop amule.xpm ED2K-Links.HOWTO Makengfile README.makeng \
	config.h.in Compilation.flags.in

icon_DATA = amule.xpm src/utils/cas/stats.png
icondir = $(datadir)/pixmaps

util_DATA = amule.desktop
utildir = $(datadir)/applications

ACLOCAL_AMFLAGS = -I m4

